# EnvAware

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: common.cmake
envaware/: CMakeLists.txt  version.hpp
tests/: CMakeLists.txt  utils_test.cpp
tests/common/: tests_common_pch.hpp
